fix issue for retrieving urls

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "webpack": "webpack --config webpack.conf.js",
     "dev": "webpack --config webpack.conf.js --watch",
-    "start": "npm run webpack"
+    "start": "npm run webpack",
+    "prepublish": "npm run start"
   },
   "author": "vic.wang",
   "license": "ISC",
